package es.usantatecla.companyManagement.menu;

public enum Languaje {

    SPANISH,
    ENGLISH;
    
    private Languaje(){}  
}
