package es.usantatecla.date;

public class Date {
    public Date() {
    }

    public Date(int day, int month, int year) {
    }

    public Date ElapsedSince(Date date){
        return null;
    }

    public Date Add(Date date){
        return null;
    }

    public boolean equals(Date date) {
        return true;
    }

    public int getDay() {
        return 0;
    }

    public int getMonth() {
        return 0;
    }

    public int getYear() {
        return 0;
    }
}
