@startuml
class CompanyManagement
class ServiceContract
class ServiceContractView
class MenuView
class Menu
class CancelOption
class ShowOption
class ExitOption
class EnlargeOption
class ShiftOption
class GetCostOption

class Date
class Interval
enum Message
enum Languaje

interface Option

CompanyManagement *--> ServiceContract
CompanyManagement ..> ServiceContractView
CompanyManagement ..> MenuView
CompanyManagement ..> Languaje

ServiceContractView ..> ServiceContract
ServiceContractView ..> Date
ServiceContractView ..> Message

ServiceContract ..> Date
ServiceContract *--> "360" Interval

MenuView --> Menu
MenuView ..> ServiceContractView
MenuView ..> Message

Menu -->"6" Option
' Menu --> CancelOption
' Menu --> EnlargeOption
' Menu --> ExitOption
' Menu --> GetCostOption
' Menu --> ShiftOption
' Menu --> ShowOption

' CancelOption ..> ServiceContractView
' EnlargeOption ..> ServiceContractView
' ExitOption ..> ServiceContractView
' GetCostOption ..> ServiceContractView
' ShiftOption ..> ServiceContractView
' ShowOption ..> ServiceContractView

Option <|.. CancelOption
Option <|.. EnlargeOption
Option <|.. ExitOption
Option <|.. GetCostOption
Option <|.. ShiftOption
Option <|.. ShowOption

@enduml